cmake_minimum_required(VERSION 3.29)

set(LIB_NAME imgui-sdl3)
project(${LIB_NAME})
set(IMGUI_SOURCES imgui.cpp imgui_draw.cpp imgui_tables.cpp imgui_widgets.cpp imgui.h imgui_internal.h)
set(IMGUI_SDL3_SOURCES backends/imgui_impl_sdl3.cpp backends/imgui_impl_sdl3.h backends/imgui_impl_sdlrenderer3.cpp backends/imgui_impl_sdlrenderer3.h)
set(SOURCES ${IMGUI_SOURCES} ${IMGUI_SDL3_SOURCES} imgui-sdl3.h)
add_library(${LIB_NAME} ${SOURCES})
target_include_directories(${LIB_NAME} PUBLIC .)
target_link_libraries(${LIB_NAME} PUBLIC SDL3::SDL3)